<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/preferences_dialog_addresses_title"
        android:entries="@array/addresses"
        android:entryValues="@array/addresses_values"
        android:key="pref_user_address"
        android:summary="%s"
        android:title="@string/preferences_title_address" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_user_notifications_ping"
        android:summaryOff="@string/preferences_summary_off_notifications_ping"
        android:summaryOn="@string/preferences_summary_on_notifications_ping"
        android:title="@string/preferences_title_notifications_ping" />

    <androidx.preference.Preference
        android:key="pref_info_switch_to"
        android:summary="@string/preferences_summary_switch_to"
        android:title="@string/preferences_title_switch_to" />
</androidx.preference.PreferenceScreen>
